# trezoa-attestation-service

./: CLAUDE.md  Cargo.toml  README.md  package.json  pnpm-lock.yaml
cereal_macro/: Cargo.toml
cereal_macro/src/: lib.rs
clients/rust/: Cargo.toml
clients/typescript/: package.json  pnpm-lock.yaml
clients/typescript/src/: pdas.ts
clients/typescript/test/: pdas.ts
core/: Cargo.toml
core/src/: lib.rs
examples/rust/attestation-flow-guide/: README.md
examples/rust/attestation-flow-guide/standard-demo/: Cargo.toml
examples/rust/attestation-flow-guide/standard-demo/src/: main.rs
examples/rust/attestation-flow-guide/tokenization-demo/: Cargo.toml
examples/rust/attestation-flow-guide/tokenization-demo/src/: main.rs
examples/typescript/: setup-koranet-credential.ts  setup-koranet-example-attestation.ts  setup-koranet-schema.ts
examples/typescript/attestation-flow-guides/: README.md  package.json
examples/typescript/attestation-flow-guides/src/gill/: sas-standard-gill-demo.ts  sas-tokenized-gill-demo.ts
examples/typescript/attestation-flow-guides/src/kit/: sas-standard-kit-demo.ts  sas-tokenized-kit-demo.ts
idl/: trezoa_attestation_service.json
integration_tests/: Cargo.toml
integration_tests/tests/: test_change_authorized_signers.rs  test_change_schema_description.rs  test_change_schema_status.rs  test_change_schema_version.rs  test_close_attestation.rs  test_create_attestation.rs  test_create_credential.rs  test_create_schema.rs  test_tokenization.rs
integration_tests/tests/helpers/: mod.rs
program/: Cargo.toml
program/src/: constants.rs  instructions.rs  lib.rs
program/src/processor/: change_schema_version.rs  close_tokenized_attestation.rs  create_attestation.rs  create_credential.rs  create_schema.rs  create_tokenized_attestation.rs  tokenize_schema.rs
scripts/: generate-clients.js
utils/: keypair-loader.ts
