[workspace]

members = [
  "program",
  "cereal_macro",
  "core",
  "clients/rust",
  "integration_tests",
]

resolver = "2"

package.version = "0.1.0"
package.edition = "2021"

[workspace.dependencies]
borsh = "1.5.5"
const-crypto = "0.3.0"
pinocchio = { git = "https://github.com/Nagaprasadvr/pinocchio", branch = "feat-add-token-extensions", package = "pinocchio" }
pinocchio-log = { git = "https://github.com/Nagaprasadvr/pinocchio", branch = "feat-add-token-extensions", package = "pinocchio-log" }
pinocchio-pubkey = { git = "https://github.com/Nagaprasadvr/pinocchio", branch = "feat-add-token-extensions", package = "pinocchio-pubkey" }
pinocchio-system = { git = "https://github.com/Nagaprasadvr/pinocchio", branch = "feat-add-token-extensions", package = "pinocchio-system" }
pinocchio-token = { git = "https://github.com/Nagaprasadvr/pinocchio", branch = "feat-add-token-extensions", package = "pinocchio-token" }
pinocchio-associated-token-account = { git = "https://github.com/Nagaprasadvr/pinocchio", branch = "feat-add-token-extensions", package = "pinocchio-associated-token-account" }
proc-macro2 = "1.0.86"
quote = "1.0.36"
shank = "0.4.2"
trezoa-attestation-service-macros = { path = "cereal_macro" }
trezoa-attestation-service-client = { path = "clients/rust" }
trezoa-program = "2.1.13"
trezoa-program-test = "2.1.13"
trezoa-sdk = "2.1.13"
tpl-token-2022 = "8.0.1"
tpl-associated-token-account = "6.0.0"
tpl-token-group-interface = "0.6.0"
tpl-token-metadata-interface = "0.7.0"
syn = "2.0.72"
tokio = "1.43.0"
bs58 = "0.4"
