[package]
name = "tests-trezoa-attestation-service"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
borsh = { workspace = true }
trezoa-attestation-service-macros = { workspace = true }
trezoa-attestation-service-client = { workspace = true }
trezoa-program-test = { workspace = true }
trezoa-sdk = { workspace = true }
tpl-token-2022 = { workspace = true }
tokio = { workspace = true }
tpl-associated-token-account = { workspace = true }
tpl-token-group-interface = { workspace = true }
tpl-token-metadata-interface = { workspace = true }
