[package]
name = "trezoa-attestation-service-client"
version = "1.0.9"
edition = "2021"
description = "Rust client for the Trezoa Attestation Service"
license = "MIT"
repository = "https://github.com/trezoa-foundation/trezoa-attestation-service"

[dependencies]
borsh = { workspace = true }
trezoa-program = { workspace = true }