[package]
name = "sas-standard-demo"
version = "0.1.0"
edition = "2021"
 
[dependencies]
# Trezoa core dependencies
trezoa-sdk = "2.3.1"
trezoa-client = "2.3.2"
trezoa-program = "2.3.0"
trezoa-system-interface = "1.0.0"
 
# Trezoa Attestation Service client
trezoa-attestation-service-client = "1.0.9"
 
# Async runtime
tokio = { version = "1.0", features = ["full"] }
 
# Serialization
borsh = "0.10"
 
# Error handling
anyhow = "1.0"