[package]
name = "sas-demo"
version = "0.1.0"
edition = "2021"
 
[dependencies]
# Trezoa core dependencies (existing)
trezoa-sdk = "2.3.1"
trezoa-client = "2.3.2"
trezoa-program = "2.3.0"
trezoa-system-interface = "1.0.0"
 
# TPL Token Program dependencies (NEW)
tpl-token-2022 = "9.0.0"
tpl-token-metadata-interface = "0.7.0"
tpl-associated-token-account = "7.0.0"
tpl-pod = "0.5.1"
tpl-token-group-interface = "0.6.0"
 
# Trezoa Attestation Service client (existing)
trezoa-attestation-service-client = "1.0.9"
 
# Async runtime (existing)
tokio = { version = "1.0", features = ["full"] }
 
# Serialization (existing)
borsh = "0.10"
 
# Error handling (existing)
anyhow = "1.0"